--- a/mobile.html
+++ b/mobile.html
@@ -110,19 +110,21 @@
         </article>
     </section>
 
+
+
     <section id="capstone1" class="">
         <article class="row pb-5">
             
-            <div id="" class="col-4 order-2 description">
+            <div id="" class="sm-order-2 col-sm-12">
                 <h2>Portfolio</h2>
             <p>This Portfolio is inspired by the characteristics of a Panda. 
             </p>
             <p><strong>Gentle</strong>, <strong>Minimal</strong> and <strong>Playful</strong></p>
 
-            <a href="#capstone2"><img id="" class="buttonPic-sm" src="./src/images/1.png"></a>
+            <a href="#capstone2"><img id="" class="buttonPic-sm sm-none" src="./src/images/1.png"></a>
             
             </div>
-            <div id="" class="col-7 order-1 text-center d-none d-sm-block">
+            <div id="" class="text-center sm-order-1 col-sm-12">
             <img class="capstoneImg img-fluid" src="./src/images/panda.PNG" alt="">
             </div>
         </article>
