add email submission

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="index.css">
 
-    <title>Document</title>
+    <title>Campos Portfolio</title>
 </head>
 <body class="d-flex flex-column">
 
@@ -170,12 +170,10 @@
             <div class="col-6 text-white">
                 <h1 id="contactMeHeader">Contact me</h1>
                 <span>camposjoshuafranco@gmail</span><span>|</span><span>(+63) 917 712 1722</span><span>|</span><span>joshua@gamerbloo.ph</span>
-                <h1 class="mt-5 mb-5">Or</h1>
-                <h2 id="messagehere">Send a message here!</h2>
             </div>
 
-            <form id="contactForm" class="container col-6 p-5">
-                
+
+            <form action="https://formsubmit.co/camposjoshuafranco@gmail.com" method="POST" id="contactForm" class="container col-6 p-5">
                 <div class="form-group col-6">
                         <label for="inputName">Name</label>
                         <input type="text" class="form-control" id="inputName" placeholder="Name">
